Kotlin, new project structure