@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cz.vhromada.maven</groupId>
-        <artifactId>parent</artifactId>
-        <version>2.0.1</version>
+         <groupId>cz.vhromada.project</groupId>
+        <artifactId>project-parent</artifactId>
+        <version>4.0.3</version>
     </parent>
 
     <groupId>cz.vhromada.bookcase</groupId>
     <artifactId>bookcase</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <packaging>pom</packaging>
 
     <name>Bookcase</name>
@@ -42,52 +42,27 @@
     </scm>
 
     <modules>
-        <module>Bookcase core</module>
-        <module>Bookcase REST</module>
-        <module>Bookcase web</module>
+        <module>bookcase-core</module>
+        <module>bookcase-web</module>
     </modules>
 
     <properties>
-        <common.version>1.0.3</common.version>
+        <common.version>3.0.3</common.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>cz.vhromada.common</groupId>
-                <artifactId>core</artifactId>
+                <artifactId>common-core</artifactId>
                 <version>${common.version}</version>
             </dependency>
             <dependency>
                 <groupId>cz.vhromada.common</groupId>
-                <artifactId>test</artifactId>
+                <artifactId>common-test</artifactId>
                 <version>${common.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cz.vhromada.validation</groupId>
-                <artifactId>result</artifactId>
-                <version>2.0.3</version>
-            </dependency>
-            <dependency>
-                <groupId>cz.vhromada.converters</groupId>
-                <artifactId>converters-orika</artifactId>
-                <version>3.0.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <argLine>--add-modules java.xml.bind</argLine>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
 
 </project>
